Sin errores de navegador en plantilla

--- a/KN_WEB/KN_WEB.csproj
+++ b/KN_WEB/KN_WEB.csproj
@@ -191,10 +191,14 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Template\fonts\lineicons.ttf" />
+    <Content Include="Template\fonts\lineicons.woff" />
+    <Content Include="Template\fonts\lineicons.woff2" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
+    <Folder Include="Template\images\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.rtl.min.css.map" />
